--- a/templates/contact.html
+++ b/templates/contact.html
@@ -13,6 +13,7 @@
         }
 
         .background {
+            background: linear-gradient(135deg, #2e2e2e, #404040); /* Dégradé gris foncé */
             background-image: url('ferrari.jpg'), url('ducati-panigale.jpg');
             background-size: cover, cover;
             background-position: center, center;
